--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,51 @@
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.vi
+*~
+*.sass-cache
 
-.DS_Store
+# OS or Editor folders
+*.DS_Store
+Thumbs.db
+.cache
+*.codekit
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+
+# Design Files ~over 100mb
+*.psd
+
+# Dreamweaver added files
+_notes
+dwsync.xml
+
+# Komodo
+*.komodoproject
+.komodotools
+
+# Folders to ignore
+.hg
+.svn
+.CVS
+intermediate
+publish
+.idea
+
+# build script local files
+build/buildinfo.properties
+build/config/buildinfo.properties
+
+#Codekit Local Mapping
+*config.codekit
+*.codekit-cache
