--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,13 @@ greybox/config.codekit
 *.codekit
 
 *.codekit
+
+greybox/config.codekit
+
+greybox/config.codekit
+
+greybox/css/global.css
+
+greybox/css/global.css.map
+
+greybox/sass/_variables.scss
