--- a/react-redesign/package.json
+++ b/react-redesign/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "mdi-react": "^4.4.0",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
     "node-sass": "^4.10.0",
@@ -31,6 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "mdi-react": "^5.2.0",
     "react-styleguidist": "^8.0.6"
   }
 }
