--- a/react-redesign/package.json
+++ b/react-redesign/package.json
@@ -2,11 +2,12 @@
   "name": "react-redesign",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://joeldom.github.io/app",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "mdi-react": "^4.4.0",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
+    "mdi-react": "^4.4.0",
     "node-sass": "^4.10.0",
     "npm": "^6.7.0",
     "prettier": "^1.15.3",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +36,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "mdi-react": "^5.2.0",
     "react-styleguidist": "^8.0.6"
   }
