--- a/react-redesign/package.json
+++ b/react-redesign/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "homepage": "http://joeldom.github.io/app",
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.4.1",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
-    "mdi-react": "^4.4.0",
-    "node-sass": "^4.10.0",
-    "npm": "^6.7.0",
+    "mdi-react": "^5.2.0",
+    "node-sass": "^4.13.1",
+    "npm": "^6.13.6",
     "prettier": "^1.15.3",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
